--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ spring:
     username: root
     password: root
     url: jdbc:mysql:///z-blogs?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+
+
+jwt:
+  header: Authorization
+  secretKey: Z-blogs
+  bearer: "Bearer "
+  expiration: 43200000
